make matiching quary to ssms done 1.0