@@ -5,9 +5,7 @@ import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
 
-import java.sql.PreparedStatement;
 import java.sql.ResultSet;
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -16,13 +14,11 @@ public class EventRepository {
 
     private final JdbcTemplate jdbcTemplate;
 
-
     public EventRepository(
             JdbcTemplate jdbcTemplate
     ) {
         this.jdbcTemplate = jdbcTemplate;
     }
-
 
     // ============================================================
     // FIND ALL EVENTS
@@ -57,39 +53,42 @@ public class EventRepository {
                         COUNT(er.id) AS registered_count
                     FROM events e
                     JOIN employees emp
-                        ON emp.employee_number = e.organizer_id
+                        ON emp.employee_number =
+                           e.organizer_id
                     LEFT JOIN event_registrations er
                         ON er.event_id = e.id
                     WHERE 1 = 1
                     """);
 
-
         List<Object> params =
                 new ArrayList<>();
 
+        // --------------------------------------------------------
+        // Search
+        // --------------------------------------------------------
 
-        if (search != null &&
-                !search.trim().isEmpty()) {
+        if (
+                search != null
+                        && !search.isBlank()
+        ) {
 
             sql.append("""
-                    AND (
-                        LOWER(e.title)
+                AND (
+                    LOWER(e.title)
                         LIKE LOWER(?)
 
-                        OR LOWER(
-                            COALESCE(e.description, '')
-                        )
-                        LIKE LOWER(?)
-
-                        OR LOWER(e.location)
-                        LIKE LOWER(?)
-
-                        OR LOWER(
-                            e.category
-                        )
-                        LIKE LOWER(?)
+                    OR LOWER(
+                        COALESCE(e.description, '')
                     )
-                    """);
+                        LIKE LOWER(?)
+
+                    OR LOWER(e.location)
+                        LIKE LOWER(?)
+
+                    OR LOWER(e.category)
+                        LIKE LOWER(?)
+                )
+                """);
 
             String value =
                     "%" + search.trim() + "%";
@@ -100,52 +99,68 @@ public class EventRepository {
             params.add(value);
         }
 
+        // --------------------------------------------------------
+        // Category
+        // --------------------------------------------------------
 
-        if (category != null &&
-                !category.isBlank() &&
-                !category.equalsIgnoreCase("All")) {
+        if (
+                category != null
+                        && !category.isBlank()
+                        && !category.equalsIgnoreCase("All")
+        ) {
 
             sql.append(
                     " AND e.category = ? "
             );
 
-            params.add(category);
+            params.add(
+                    category.trim()
+            );
         }
 
+        // --------------------------------------------------------
+        // Status
+        // --------------------------------------------------------
 
-        if (status != null &&
-                !status.isBlank() &&
-                !status.equalsIgnoreCase("All")) {
+        if (
+                status != null
+                        && !status.isBlank()
+                        && !status.equalsIgnoreCase("All")
+        ) {
 
             sql.append(
                     " AND e.status = ? "
             );
 
-            params.add(status);
+            params.add(
+                    status.trim()
+            );
         }
 
+        // --------------------------------------------------------
+        // GROUP / ORDER
+        // --------------------------------------------------------
 
         sql.append("""
-                GROUP BY
-                    e.id,
-                    e.title,
-                    e.description,
-                    e.organizer_id,
-                    emp.first_name,
-                    emp.last_name,
-                    e.category,
-                    e.event_date,
-                    e.start_time,
-                    e.end_time,
-                    e.location,
-                    e.capacity,
-                    e.status
-                ORDER BY
-                    e.event_date ASC,
-                    e.start_time ASC,
-                    e.id ASC
-                """);
-
+            GROUP BY
+                e.id,
+                e.title,
+                e.description,
+                e.organizer_id,
+                emp.first_name,
+                emp.last_name,
+                e.category,
+                e.event_date,
+                e.start_time,
+                e.end_time,
+                e.location,
+                e.capacity,
+                e.status
+            ORDER BY
+                e.event_date ASC,
+                e.start_time ASC,
+                e.id ASC
+            """);
 
         List<Event> events =
                 jdbcTemplate.query(
@@ -153,7 +168,6 @@ public class EventRepository {
                         params.toArray(),
                         this::mapEvent
                 );
-
 
         for (Event event : events) {
 
@@ -163,10 +177,8 @@ public class EventRepository {
             );
         }
 
-
         return events;
     }
-
 
     // ============================================================
     // FIND ONE EVENT
@@ -178,47 +190,46 @@ public class EventRepository {
     ) {
 
         String sql = """
-                SELECT
-                    e.id,
-                    e.title,
-                    e.description,
-                    e.organizer_id,
-                    CONCAT(
-                        emp.first_name,
-                        ' ',
-                        emp.last_name
-                    ) AS organizer,
-                    e.category,
-                    e.event_date,
-                    e.start_time,
-                    e.end_time,
-                    e.location,
-                    e.capacity,
-                    e.status,
-                    COUNT(er.id) AS registered_count
-                FROM events e
-                JOIN employees emp
-                    ON emp.employee_number =
-                       e.organizer_id
-                LEFT JOIN event_registrations er
-                    ON er.event_id = e.id
-                WHERE e.id = ?
-                GROUP BY
-                    e.id,
-                    e.title,
-                    e.description,
-                    e.organizer_id,
+            SELECT
+                e.id,
+                e.title,
+                e.description,
+                e.organizer_id,
+                CONCAT(
                     emp.first_name,
-                    emp.last_name,
-                    e.category,
-                    e.event_date,
-                    e.start_time,
-                    e.end_time,
-                    e.location,
-                    e.capacity,
-                    e.status
-                """;
-
+                    ' ',
+                    emp.last_name
+                ) AS organizer,
+                e.category,
+                e.event_date,
+                e.start_time,
+                e.end_time,
+                e.location,
+                e.capacity,
+                e.status,
+                COUNT(er.id) AS registered_count
+            FROM events e
+            JOIN employees emp
+                ON emp.employee_number =
+                   e.organizer_id
+            LEFT JOIN event_registrations er
+                ON er.event_id = e.id
+            WHERE e.id = ?
+            GROUP BY
+                e.id,
+                e.title,
+                e.description,
+                e.organizer_id,
+                emp.first_name,
+                emp.last_name,
+                e.category,
+                e.event_date,
+                e.start_time,
+                e.end_time,
+                e.location,
+                e.capacity,
+                e.status
+            """;
 
         try {
 
@@ -229,19 +240,17 @@ public class EventRepository {
                             id
                     );
 
-
             if (event == null) {
+
                 throw new IllegalArgumentException(
                         "Event not found"
                 );
             }
 
-
             loadRegistrationData(
                     event,
                     employeeId
             );
-
 
             return event;
 
@@ -255,7 +264,6 @@ public class EventRepository {
         }
     }
 
-
     // ============================================================
     // CREATE
     // ============================================================
@@ -265,22 +273,21 @@ public class EventRepository {
     ) {
 
         String sql = """
-                INSERT INTO events (
-                    title,
-                    description,
-                    organizer_id,
-                    category,
-                    event_date,
-                    start_time,
-                    end_time,
-                    location,
-                    capacity,
-                    status
-                )
-                VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
-                RETURNING id
-                """;
-
+            INSERT INTO events (
+                title,
+                description,
+                organizer_id,
+                category,
+                event_date,
+                start_time,
+                end_time,
+                location,
+                capacity,
+                status
+            )
+            OUTPUT INSERTED.id
+            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
+            """;
 
         Long id =
                 jdbcTemplate.queryForObject(
@@ -298,12 +305,17 @@ public class EventRepository {
                         event.getStatus()
                 );
 
+        if (id == null) {
+
+            throw new IllegalStateException(
+                    "Failed to create event"
+            );
+        }
 
         event.setId(id);
 
         return event;
     }
-
 
     // ============================================================
     // UPDATE
@@ -325,15 +337,14 @@ public class EventRepository {
                         id
                 );
 
-
         if (registeredCount == null) {
             registeredCount = 0;
         }
 
-
         if (
-                event.getCapacity() <
-                registeredCount
+                event.getCapacity() == null
+                        || event.getCapacity()
+                        < registeredCount
         ) {
 
             throw new IllegalArgumentException(
@@ -341,24 +352,22 @@ public class EventRepository {
             );
         }
 
-
         String sql = """
-                UPDATE events
-                SET
-                    title = ?,
-                    description = ?,
-                    organizer_id = ?,
-                    category = ?,
-                    event_date = ?,
-                    start_time = ?,
-                    end_time = ?,
-                    location = ?,
-                    capacity = ?,
-                    status = ?,
-                    updated_at = CURRENT_TIMESTAMP
-                WHERE id = ?
-                """;
-
+            UPDATE events
+            SET
+                title = ?,
+                description = ?,
+                organizer_id = ?,
+                category = ?,
+                event_date = ?,
+                start_time = ?,
+                end_time = ?,
+                location = ?,
+                capacity = ?,
+                status = ?,
+                updated_at = SYSDATETIME()
+            WHERE id = ?
+            """;
 
         int updated =
                 jdbcTemplate.update(
@@ -376,7 +385,6 @@ public class EventRepository {
                         id
                 );
 
-
         if (updated == 0) {
 
             throw new IllegalArgumentException(
@@ -384,12 +392,10 @@ public class EventRepository {
             );
         }
 
-
         event.setId(id);
 
         return event;
     }
-
 
     // ============================================================
     // DELETE
@@ -408,7 +414,6 @@ public class EventRepository {
                         id
                 );
 
-
         if (deleted == 0) {
 
             throw new IllegalArgumentException(
@@ -416,7 +421,6 @@ public class EventRepository {
             );
         }
     }
-
 
     // ============================================================
     // REGISTER
@@ -433,36 +437,37 @@ public class EventRepository {
                         employeeId
                 );
 
-
-        if ("Cancelled".equals(
-                event.getStatus()
-        )) {
+        if (
+                "Cancelled".equals(
+                        event.getStatus()
+                )
+        ) {
 
             throw new IllegalArgumentException(
                     "Cannot register for a cancelled event"
             );
         }
 
-
-        if (!"Upcoming".equals(
-                event.getStatus()
-        )) {
+        if (
+                !"Upcoming".equals(
+                        event.getStatus()
+                )
+        ) {
 
             throw new IllegalArgumentException(
                     "Registration is only available for upcoming events"
             );
         }
 
-
         if (
-                event.getAvailableSeats() <= 0
+                event.getAvailableSeats() == null
+                        || event.getAvailableSeats() <= 0
         ) {
 
             throw new IllegalArgumentException(
                     "This event is full"
             );
         }
-
 
         Integer existing =
                 jdbcTemplate.queryForObject(
@@ -477,17 +482,15 @@ public class EventRepository {
                         employeeId
                 );
 
-
         if (
-                existing != null &&
-                existing > 0
+                existing != null
+                        && existing > 0
         ) {
 
             throw new IllegalArgumentException(
                     "Employee is already registered for this event"
             );
         }
-
 
         jdbcTemplate.update(
                 """
@@ -501,7 +504,6 @@ public class EventRepository {
                 employeeId
         );
     }
-
 
     // ============================================================
     // UNREGISTER
@@ -523,7 +525,6 @@ public class EventRepository {
                         employeeId
                 );
 
-
         if (deleted == 0) {
 
             throw new IllegalArgumentException(
@@ -531,7 +532,6 @@ public class EventRepository {
             );
         }
     }
-
 
     // ============================================================
     // REGISTRATION DATA
@@ -553,15 +553,12 @@ public class EventRepository {
                         event.getId()
                 );
 
-
         int registeredCount =
                 count == null ? 0 : count;
-
 
         event.setRegisteredCount(
                 registeredCount
         );
-
 
         event.setAvailableSeats(
                 Math.max(
@@ -570,7 +567,6 @@ public class EventRepository {
                         0
                 )
         );
-
 
         List<String> registeredIds =
                 jdbcTemplate.query(
@@ -587,11 +583,9 @@ public class EventRepository {
                         event.getId()
                 );
 
-
         event.setRegisteredIds(
                 registeredIds
         );
-
 
         List<Event.Registrant> registrants =
                 jdbcTemplate.query(
@@ -626,12 +620,10 @@ public class EventRepository {
                         event.getId()
                 );
 
-
         event.setRegistrantNames(
                 registrants
         );
     }
-
 
     // ============================================================
     // MAPPER
@@ -642,7 +634,8 @@ public class EventRepository {
             int rowNumber
     ) throws java.sql.SQLException {
 
-        Event event = new Event();
+        Event event =
+                new Event();
 
         event.setId(
                 rs.getLong("id")
@@ -680,7 +673,6 @@ public class EventRepository {
             );
         }
 
-
         if (
                 rs.getTime("start_time")
                         != null
@@ -693,7 +685,6 @@ public class EventRepository {
             );
         }
 
-
         if (
                 rs.getTime("end_time")
                         != null
@@ -705,7 +696,6 @@ public class EventRepository {
                     ).toLocalTime()
             );
         }
-
 
         event.setLocation(
                 rs.getString("location")
